@@ -1,3 +1,4 @@
+* Add configurable timeouts from Active Merchant
 * Shipwire: Send the company in address1 if present. Otherwise send address1 in address1.
 * Always send address to Shipwire
 * Map company to address1 with Shipwire
